--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <a href="./seguros.html">Seguros</a>
             </li>
             <li><a href="./contato.html">Contato</a></li>
-            <li><a href="./contato.html">Termos e condicoes</a></li>
+            <li><a href="./termos.html">Termos e condicoes</a></li>
           </ul>
         </nav>
       </div>
