--- a/termos.html
+++ b/termos.html
@@ -50,7 +50,47 @@
       <p>3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
     </div>
   </main>
-
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./img/bikcraft.svg" alt="">
+      <div class="footer-contato">
+        <h3 class="font-2-l-b cor-0">Contato</h3>
+        <ul class="cor-5 font-2-m">
+          <li><a href="tel:333333">+55 31 3333333</a></li>
+          <li><a href="mailto:333333">email@email.com</a></li>
+          <li>Rua Ali perto,42 - Cidade</li>
+          <li>Belo Horizonte</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="#">
+            <img src="./img/redes/instagram.svg" alt="" srcset="">
+          </a>
+          <a href="#">
+            <img src="./img/redes/facebook.svg" alt="" srcset="">
+          </a>
+          <a href="#">
+            <img src="./img/redes/youtube.svg" alt="" srcset="">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="font-2-l-b cor-0">Informacoes</h3>
+        <nav>
+          <ul class="font-1-m cor-5">
+            <li>
+              <a href="./bicicletas.html">Bicicletas</a>
+            </li>
+            <li>
+              <a href="./seguros.html">Seguros</a>
+            </li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e condicoes</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="font-2-m cor-6 footer-copy">Bikcraft Direitos</p>
+    </div>
+  </footer>
 </body>
 
 </html>
