--- a/bicicletas.html
+++ b/bicicletas.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
-  <link rel="stylesheet" href="./css/style.mim.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Bikcraft - Bicicletas Elétricas</title>
 </head>
 
@@ -37,13 +37,14 @@
         <h1 class="font-1-xxl cor-0">nossas bicicletas<span class="cor-p1">.</span></h1>
       </div>
     </div>
+
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
         <img src="./img/bicicletas/nimbus.jpg">
         <span class="font-2-m cor-0">R$ 4999</span>
       </div>
       <div class="bicicletas-conteudo">
-        <h2 class="font-1-xl">Nimbus</h2>
+        <h2 class="font-1-xl ">Nimbus</h2>
         <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
@@ -63,19 +64,20 @@
             rastreador
           </li>
         </ul>
-        <a class="button seta" href="./bicicletas.html">Mais Sobre</a>
+        <a href="./bicicletas/nimbus.html" class="button seta">MAIS SOBRE</a>
       </div>
     </div>
+
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nimbus.jpg">
-          <span class="font-2-m cor-0">R$ 4999</span>
+          <img src="./img/bicicletas/magic.jpg">
+          <span class="font-2-m cor-0">R$ 2499</span>
         </div>
         <div class="bicicletas-conteudo">
-          <h2 class="font-1-xl cor-0">Nimbus</h2>
-          <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-          <ul class="font-1-m cor-8">
+          <h2 class="font-1-xl cor-0">Magic Might</h2>
+          <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+          <ul class="font-1-m cor-5">
             <li>
               <img src="./img/icones/eletrica.svg">
               Motor Eletrico
@@ -86,24 +88,25 @@
             </li>
             <li>
               <img src="./img/icones/velocidade.svg">
-              50km/h
+              40km/h
             </li>
             <li>
               <img src="./img/icones/rastreador.svg">
               rastreador
             </li>
           </ul>
+          <a href="./bicicletas/magic.html" class="button seta">MAIS SOBRE</a>
         </div>
       </div>
     </div>
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nimbus.jpg">
-        <span class="font-2-m cor-0">R$ 4999</span>
+        <img src="./img/bicicletas/nebula.jpg">
+        <span class="font-2-m cor-0">R$ 3999</span>
       </div>
       <div class="bicicletas-conteudo">
-        <h2 class="font-1-xl">Nimbus</h2>
-        <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <h2 class="font-1-xl">Nebula Cosmic</h2>
+        <p class="font-2-s cor-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
             <img src="./img/icones/eletrica.svg">
@@ -115,14 +118,16 @@
           </li>
           <li>
             <img src="./img/icones/velocidade.svg">
-            50km/h
+            40km/h
           </li>
           <li>
             <img src="./img/icones/rastreador.svg">
             rastreador
           </li>
         </ul>
+        <a href="./bicicletas/nebula.html" class="button seta">MAIS SOBRE</a>
       </div>
+
     </div>
   </main>
   <footer class="footer-bg">
