--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
-  <link rel="stylesheet" href="./css/style.mim.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Bikcraft - Bicicletas Elétricas</title>
 </head>
 
@@ -48,21 +48,21 @@
     <h2 class=" container font-1-xxl">ecolha a sua<span class="cor-p1">.</span></h2>
     <ul>
       <li>
-        <a href="./bicicltas/magic.html">
+        <a href="./bicicletas/magic.html">
           <img src="./img/bicicletas/magic-home.jpg" alt="">
           <h3 class="font-1-xl">Magic Might</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
         </a>
       </li>
       <li>
-        <a href="./bicicltas/magic.html">
+        <a href="./bicicletas/nimbus.html">
           <img src="./img/bicicletas/magic-home.jpg" alt="">
           <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
       <li>
-        <a href="./bicicltas/magic.html">
+        <a href="./bicicletas/nebula.html">
           <img src="./img/bicicletas/magic-home.jpg" alt="">
           <h3 class="font-1-xl">Nebula</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
