--- a/contato.html
+++ b/contato.html
@@ -85,6 +85,40 @@
       </section>
     </div>
   </main>
+  <article class="lojas container">
+    <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
+    <div class="lojas-item">
+      <img src="./img/lojas/rj.jpg" alt="">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">Belo Horizonte</h3>
+        <div class="font-2-s cor-8 lojas-dados">
+          <p>Rua Ali perto</p>
+          <p>Belo Horizonte</p>
+        </div>
+        <div class="font-2-s cor-8 lojas-dados">
+          <a href="tel:333333">+55 31 3333333</a>
+          <a href="mailto:333333">email@email.com</a>
+        </div>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18</p>
+      </div>
+    </div>
+    <div class="lojas-item">
+      <img src="./img/lojas/sp.jpg" alt="">
+
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">Belo Horizonte</h3>
+        <div class="font-2-s cor-8 lojas-dados">
+          <p>Rua Ali perto</p>
+          <p>Belo Horizonte</p>
+        </div>
+        <div class="font-2-s cor-8 lojas-dados">
+          <a href="tel:333333">+55 31 3333333</a>
+          <a href="mailto:333333">email@email.com</a>
+        </div>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18</p>
+      </div>
+    </div>
+  </article>
   <footer class="footer-bg">
     <div class="footer container">
       <img src="./img/bikcraft.svg" alt="">
