--- a/contato.html
+++ b/contato.html
@@ -45,9 +45,9 @@
           <p>Belo Horizonte</p>
           <p>Brasil - Terra - Via Lactea</p>
         </div>
-        <address class="contato-meios fonts-2-s cor-4">
+        <address class="contato-meios font-2-s cor-4">
           <a href="maito:email@email.com">email@email.com</a>
-          <a href="maito:email@email.com">emailassistencia@email.com</a>
+          <a href="maito:email@email.com">assistencia@email.com</a>
           <a href="">+55 31 33333333</a>
         </address>
         <div class="contato-redes">
