--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <title>Bikcraft - Bicicletas Elétricas</title>
 </head>
@@ -16,7 +18,7 @@
 <body>
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu">
           <li>
@@ -38,9 +40,11 @@
         <p class="font-2-l ">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="button" href="./bicicletas.html">Escolha a sua</a>
       </div>
-      <div>
+      <picture>
+        <source srcset="./img/bicicletas/nimbus.jpg" media="(max-width: 800px)">
         <img src="./img/fotos/introducao.jpg" alt="Bicicleta">
-      </div>
+      </picture>
+
 
     </div>
   </main>
@@ -49,7 +53,7 @@
     <ul>
       <li>
         <a href="./bicicletas/magic.html">
-          <img src="./img/bicicletas/magic-home.jpg" alt="">
+          <img src="./img/bicicletas/magic-home.jpg" width="920" height="1040" alt="">
           <h3 class="font-1-xl">Magic Might</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
         </a>
