--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -46,7 +46,7 @@
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-          <a href="../orcamento.html" class="button">Comprar Agora</a>
+          <a href="../orcamento.html?tipo=bikcraft&produto=nimbus" class="button">Comprar Agora</a>
           <span class="font-1-x-s cor-6"><img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
           <span class="font-1-x-s cor-6"><img src="../img/icones/estoque.svg" alt="">18 em estoque</span>
         </div>
@@ -165,6 +165,7 @@
       <p class="font-2-m cor-6 footer-copy">Bikcraft Direitos</p>
     </div>
   </footer>
+  <script src="../js/app.js"></script>
 </body>
 
 </html>
