--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
   <main class="introducao-bg">
     <div class="introducao container">
       <div class="introducao-conteudo">
-        <h1 class="font-1-xxl">Bicicletas feitas
+        <h1 class="font-1-xxl fadeInDown" data-anime="200">Bicicletas feitas
           sob medida <span>.</span></h1>
-        <p class="font-2-l ">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="button" href="./bicicletas.html">Escolha a sua</a>
+        <p class="font-2-l fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="button fadeInDown" data-anime="600" href="./bicicletas.html">Escolha a sua</a>
       </div>
-      <picture>
+      <picture data-anime="800" class="fadeInDown">
         <source srcset="./img/bicicletas/nimbus.jpg" media="(max-width: 800px)">
         <img src="./img/fotos/introducao.jpg" alt="Bicicleta">
       </picture>
@@ -212,6 +212,8 @@
       <p class="font-2-m cor-6 footer-copy">Bikcraft Direitos</p>
     </div>
   </footer>
+  <script src="./js//dist/simple-anime.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
