--- a/orcamento.html
+++ b/orcamento.html
@@ -224,6 +224,7 @@
       <p class="font-2-m cor-6 footer-copy">Bikcraft Direitos</p>
     </div>
   </footer>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
